--- a/index.html
+++ b/index.html
@@ -5,32 +5,37 @@
   <meta charset="utf-8">
 
   <title>Google</title>
-  <meta name="description" content="Google">
-  <meta name="Austin Bonk" content="SitePoint">
-
+  <meta name="Austin Bonk" content="Google">
   <link rel="stylesheet" href="stylesheet.css">
-
 </head>
-<ul>
-  <li><a href="https://about.google/?fg=1&utm_source=google-US&utm_medium=referral&utm_campaign=hp-header">about</a></li>
-  <li><a href="https://store.google.com/US?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=en-US">store</a></li>
-  <li><a href="https://mail.google.com/mail/?tab=wm&ogbl">gmail</a></li>
-  <li><a href="https://www.google.com/imghp?hl=en&tab=wi&ogbl">images</a></li>
-</ul>
+<div id="topnav">
+  <ul class="topnav">
+    <li class="topleftnav">
+      <a href="https://about.google/?fg=1&utm_source=google-US&utm_medium=referral&utm_campaign=hp-header">About</a>
+      <a href="https://store.google.com/US?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=en-US">Store</a>
+    </li>
+    <li class="toprightnav">
+      <a href="https://mail.google.com/mail/?tab=wm&ogbl">Gmail</a>
+      <a href="https://www.google.com/imghp?hl=en&tab=wi&ogbl">Images</a>
+    </li>
+  </ul>
+</div>
 <body>
   <img src="Assets/googlelogo_color_272x92dp.png" alt="Google" width="272" height="92">
-  <textarea></textarea>
-  <button>Search</button>
-  <button>I'm feeling lucky</button>
+  <ul class="search">
+    <li><textarea></textarea></li>
+    <li><button>Search</button></li>
+    <li><button>I'm feeling lucky</button></li>
+  </ul>
 </body>
-  <div class="bottomleftbar">
-    <a href="url">advertising</a>
-    <a href="url">business</a>
-    <a href="url">how search works</a>
-  </div>
-  <div class="bottomrightbar">
-    <li><a href="url">privacy</a></li>
-    <li><a href="url">terms</a></li>
-    <li><a href="url">settings</a></li>
+  <div id="bottomnav">
+    <ul class="bottomnav">
+      <li class="bottomleftnav"><a href="url">Advertising</a></li>
+      <li class="bottomleftnav"></li><a href="url">Business</a></li>
+      <li class="bottomleftnav"></li><a href="url">How search works</a></li>
+      <li class="bottomrighttnav"><a href="url">Privacy</a></li>
+      <li class="bottomrighttnav"><a href="url">Terms</a></li>
+      <li class="bottomrighttnav"><a href="url">Settings</a></li>
+    </ul>
   </div>
 </html>
